# pyuni-table

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: api.rst  conf.py  index.rst  modules.rst  pyuni_table.rst  quick_start.rst  uniques.rst
pyuni_table/: model.py  table.py
tests/functional/: conftest.py
tests/functional/table/: test_decorators.py  test_entity_operations.py  test_table_operations.py
