[tool.poetry]
name = "pyuni-table"
version = "0.1.0"
description = ""
authors = ["Wesley Kincaid <wesley.kincaid@gmail.com>"]
readme = "README.md"
packages = [{include = "pyuni_table"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.11"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
moto = {extras = ["dynamodb"], version = "^4.2.12"}
sphinx = "^7.2.6"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
